implementation of the logic code memory game

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -22,6 +22,7 @@
         margin-left: -187px;
         margin-top: 153px;
         width: 359px;
+        opacity: 0.9;
         z-index: 1;
     }
     .p-nav{ 
