--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -156,7 +156,7 @@ html, body {
   display: block;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .div-header {
     height: 80px;
     width: 100%;
@@ -207,7 +207,7 @@ html, body {
   margin-left: 20px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .ul-nav {
     padding: 0;
     background-color: #FFA808;
@@ -218,6 +218,7 @@ html, body {
     margin-left: -187px;
     margin-top: 153px;
     width: 359px;
+    opacity: 0.9;
     z-index: 1;
   }
   .p-nav {
@@ -260,7 +261,7 @@ html, body {
   margin-left: -45px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .div-about {
     flex-direction: column;
     justify-content: center;
@@ -312,7 +313,7 @@ html, body {
   text-decoration: underline;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .erreur-404 {
     margin-top: 100px;
   }
@@ -372,7 +373,7 @@ html, body {
   margin-top: 40px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .div-home {
     display: flex;
     flex-direction: row;
@@ -451,12 +452,16 @@ html, body {
   justify-content: center;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
+  .div-quiz-container {
+    height: 450px;
+  }
   .div-quiz-container h1 {
     display: none;
   }
   .div-quiz-container .div-quiz {
     display: block !important;
+    margin-top: 0;
   }
   .div-quiz-container .div-quiz h2 {
     font-size: 20px;
@@ -510,7 +515,7 @@ path :focus {
   outline-color: green;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .page-worldmap {
     height: 460px;
   }
@@ -660,7 +665,7 @@ path :focus {
   background: transparent;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .modal {
     height: 500px;
     overflow: scroll;
@@ -769,7 +774,7 @@ path :focus {
   height: auto;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .dropdown .dropdown-body {
     height: 400px;
   }
@@ -826,7 +831,7 @@ path :focus {
   display: none;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .div-listofpays {
     height: 430px;
   }
@@ -919,7 +924,7 @@ path :focus {
   margin-top: -40px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .div-quizCapitales {
     margin: 10px;
     height: 450px;
@@ -983,7 +988,7 @@ path :focus {
   pointer-events: none;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .responses .group-responses {
     margin-left: 0;
     margin-right: 0;
@@ -1034,7 +1039,7 @@ path :focus {
   margin-top: 30px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .div-quiz-result h1 {
     font-size: 19px;
   }
@@ -1079,7 +1084,7 @@ path :focus {
   top: 5px;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
   .div-lightbox {
     margin-right: 20px;
     margin-left: -10px;
@@ -1092,5 +1097,53 @@ path :focus {
   }
   .div-lightbox .continents .image-lightbox-none {
     display: none;
+  }
+}
+.div-memoryGame {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 440px;
+}
+.div-memoryGame h2 {
+  text-align: center;
+  font-size: 30px;
+}
+.div-memoryGame button {
+  cursor: pointer;
+  background-color: #132344;
+  color: white;
+  width: 20%;
+  height: 50px;
+  border-radius: 10px;
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 25px;
+}
+.div-memoryGame .button-memoryGame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (max-width: 480px) {
+  .div-memoryGame {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 470px;
+  }
+  .div-memoryGame h2 {
+    text-align: center;
+    font-size: 23px;
+  }
+  .div-memoryGame button {
+    width: 50%;
+    margin-top: 25px;
+  }
+  .div-memoryGame .button-memoryGame {
+    display: flex;
+    flex-direction: column;
   }
 }/*# sourceMappingURL=styles.css.map */
