--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,3 +18,5 @@
 @import './pages/quizResult';
 @import './components/lightbox';
 @import './pages/jeux';
+@import './pages/memoryGame';
+@import './components/memoryGameCards';
