--- a/src/styles/pages/_memoryGame.scss
+++ b/src/styles/pages/_memoryGame.scss
@@ -1,7 +1,8 @@
 .div-memoryGame {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    //display: flex;
+    //flex-direction: column;
+    //justify-content: center;
+    //align-items: center;
     height: 440px;
     h2 {
         text-align: center;
@@ -29,7 +30,6 @@
             font-size: 23px;
         }
         button {
-            //@include button;
             width: 50%;
             margin-top: 25px;
         }
