fixe restyle worldmap

--- a/src/styles/pages/_listofstates.scss
+++ b/src/styles/pages/_listofstates.scss
@@ -13,9 +13,10 @@
             bottom: -20px;
             right: 10px;
             display: flex;
+            width: 300px;
             align-items: center;
             i {
-                margin-left: 20px;
+                cursor: pointer;
                 font-size: 100px;
             }
         }
@@ -34,7 +35,9 @@
         z-index: 1;
         position: absolute;
         top: 420px;
+        width: 300px;
         i {
+            cursor: pointer;
             margin-left: 20px;
             font-size: 100px;
         }
@@ -49,7 +52,7 @@
         height: 430px;
         .div-world {
             flex-direction: column;
-            .img-world-list {
+            .img-world-list { 
                 animation: myAnim 1s ease 0s 1 normal forwards;
                 width: auto;
                 height: 200px;
@@ -82,6 +85,7 @@
             top: 490px;
             left: -20px;
             i {
+                cursor: pointer;
                 margin-right: 20px;
                 font-size: 100px;
             }
