--- a/src/styles/pages/_pageworldmap.scss
+++ b/src/styles/pages/_pageworldmap.scss
@@ -28,7 +28,7 @@ path{
       .world-map {
          margin-top: 10px;
          height: 400px;
-         margin-right: 30px;
+         //margin-right: 30px; 
          svg {
             height: 500px;
          }
