--- a/src/styles/components/_lightbox.scss
+++ b/src/styles/components/_lightbox.scss
@@ -7,9 +7,11 @@
         font-size: 100px;
         width: 15%;
         display: flex;
+        cursor: pointer;
     }
     .icon2 {
         justify-content: flex-end;
+        cursor: pointer;
     }
     .continents {
         margin-top: -100px;
@@ -34,7 +36,7 @@
 }
 
 @media screen and (max-width: 480px){
-    .div-lightbox {
+    .div-lightbox { 
         margin-right: 20px;
         margin-left: -10px;
         .icon {
