--- a/src/styles/components/_worldmap.scss
+++ b/src/styles/components/_worldmap.scss
@@ -35,3 +35,21 @@ svg {
   .controls > button:first-child {
     margin-right: 0.25rem;
   }
+
+  .button-link {
+    position: fixed;
+    left: 0;
+    @include button;
+    color: white;
+    width: 200px;
+    font-size: 15px;
+    height: 40px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+@media screen and (max-width: 480px){
+  .controls{
+    top:80%;
+  }
+}
