--- a/src/styles/components/_memoryGameCards.scss
+++ b/src/styles/components/_memoryGameCards.scss
@@ -11,6 +11,7 @@
             width: 15%;
             height: 25%;
             margin: 2px;
+            border-radius: 10px;
         }
     }
     .img-memoryGame-intermediate {
@@ -18,6 +19,7 @@
         img {
             width: 13%;
             height: 25%;
+            border-radius: 10px;
         }
     }
     .img-memoryGame-expert {
@@ -27,6 +29,7 @@
             width: 9%;
             height: 15%;
             margin: 2px;
+            border-radius: 10px;
         }
     }
 }
