fix beug quiz ok

--- a/src/styles/pages/_quizCapitales.scss
+++ b/src/styles/pages/_quizCapitales.scss
@@ -51,3 +51,9 @@
         }
     }
 }
+
+.validate-button{
+    background-color: #FFA808 !important;
+    border: none;
+    color: #132344 !important;
+}
