--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -8,4 +8,8 @@
     color:  white;
     font-weight: bold;
     font-family: $font;
+    //position:absolute;
+   //bottom:0;
+   width:100%;
+   height:100px;   /* Hauteur du pied de page */
  }
