--- a/src/styles/pages/_memoryGame.scss
+++ b/src/styles/pages/_memoryGame.scss
@@ -12,15 +12,23 @@
     button {
         @include button;
         margin-top: 25px;
-        &:focus{
-            width: 25%;
-            color: white;
-        }
     }
     .button-memoryGame {
         display: flex;
-        flex-direction: column;
+        flex-direction: column; 
         align-items: center;
+        .button-green {
+            background-color: green;
+            width: 25%;
+        }
+        .button-yellow {
+            background-color:#FFA808;
+            width: 25%;
+        }
+        .button-red {
+            background-color: red;
+            width: 25%;
+        }
     }
 }
 
@@ -30,6 +38,7 @@
         flex-direction: column;
         justify-content: center;
         //height: 470px;
+        //height: 100%;
         max-height: 1000px !important;
         h2 {
             text-align: center;
@@ -38,15 +47,13 @@
         button {
             width: 50%;
             margin-top: 25px;
-            &:focus{
-                width: 55%;
-                height: 55px;
-                color: white;
-            }
         } 
         .button-memoryGame {
             display: flex;
             flex-direction: column;
+            .button-green , .button-red , .button-yellow {
+                width: 55%;
+            }
         }
     }
 }
